[tool.poetry]
name = "dada_mwenzangu_ussd"
version = "0.1.0"
description = ""
authors = ["nicholas-ngatia <nmngatia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
redis = "^4.2.2"
black = "^22.3.0"
pymongo = "^4.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
